[package]
name = "rusty-pet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {default-features = false, features = ["client", "gateway", "rustls_backend", "model", "standard_framework", "cache"], version = "0.10"}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
base64 = "0.13.0"
reqwest = "0.11.4"